objects/vlocity_cmt__FieldsConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for defining the configuration for the fields in UI</description>
    <fields>
        <fullName>vlocity_cmt__Feature__c</fullName>
        <description>Defines which feature i.e. Application or Omni.</description>
        <label>Feature</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FieldSetName__c</fullName>
        <label>FieldSet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FieldSettingName__c</fullName>
        <label>Field Setting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FieldsConfiguration</label>
</CustomObject>